<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardGoogle">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="411dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenUser"
                android:layout_width="103dp"
                android:layout_height="85dp"
                android:layout_marginStart="154dp"
                android:layout_marginLeft="154dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="108dp"
                android:text="@string/usuario"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="144dp"
                android:text="@string/correo"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="108dp"
                android:text="nombres.."
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="144dp"
                android:text="correo.."
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/logout"
                app:backgroundTint="#03A9F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text4"
                tools:text="@string/logout" />

            <Button
                android:id="@+id/btnEliminarCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="180dp"
                android:text="@string/deleteaccount"
                app:backgroundTint="#03A9F4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/deleteaccount" />

            <Button
                android:id="@+id/verfarmacia"
                android:layout_width="307dp"
                android:layout_height="36dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="240dp"
                android:text="@string/verfarmacia"
                app:backgroundTint="#3F51B5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="288dp"
                android:text="@string/listacarrito"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/Listarfarmacos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="328dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/comprar"
        app:backgroundTint="#03A9F4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/vercompras"
        app:backgroundTint="#3F51B5" />
</LinearLayout>